Получилось выводить у админа все заказы и искать по части номера заказа!

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.generate-ddl=true
 spring.main.allow-bean-definition-overriding=true
 spring.main.allow-circular-references=true
 
-upload.path = /Users/Admin/Documents/uploads 
+upload.path = /C:/uploads
 
 # user_test User@123
 # admin Admin@123
